css/includes/_base.scss
/* ... */
.itil-object-fields .col-12.glpi-full-width {
    .col-form-label {
        width: 28%;
    }

    .field-container {
        width: 72%;
    }
}

// Needed as 'text-muted' may not always be readable depending on the menu
// background color.
.horizontal-layout  {
    .text-muted-menu {
        color: var(--glpi-mainmenu-fg-muted) !important;
    }
}

.vertical-layout  {
    .text-muted-menu {
        color: var(--tblr-muted) !important;
    }
}

.remove-last-tinymce-margin {
    // Remove annoying margin from tinymce's last paragraph
    p:last-child {
        margin-bottom: 0;
    }
}

// Missing class from tabler, probably need to update it ?
.btn-check:checked+.btn {
    color           : var(--tblr-btn-hover-color) !important;
    background-color: var(--tblr-btn-active-bg) !important;
}

.w-fit-content {
    width: fit-content;
}

.accordion-button:hover, .accordion-button:focus {
    z-index: unset;
}

// The definition from tabler doesn't seem to take into account our primary color. Bug?
.border-primary {
    border-color: var(--tblr-primary) !important;
}

.nav {
    --tblr-nav-link-color: color-mix(in srgb, var(--tblr-light), var(--tblr-dark) 70%);
}

.text-muted {
    color: var(--tblr-muted) !important;

    thead,
    tbody,
    tfoot,
    tr,
    td,
    th {
        border-width: inherit; // Prevent removal of borders from reboot CSS
    }
}

.input-group {
    box-shadow: none !important;
}

.input-group-text {
    color: inherit !important;
    background-color: inherit !important;
}

// Temporary tabler fix, to remove once https://github.com/tabler/tabler/issues/2271 is fixed.
html {
    @include media-breakpoint-up(lg) {
        margin-left: 0 !important;
    }
}

// Disabled checkboxes and radio are almost invisible in tabler.
// We increase their opacity here to make them more accessible.
input.form-check-input[type="radio"]:disabled,
input.form-check-input[type="checkbox"]:disabled {
    opacity: 0.9;
}

